* fixed HOPS navigation link visibility issue * Adjusted files layout in studies view * Ruled evaluation outside of unassessed workspaces * Removed matriculation link from records tab as it has it's own button in YO tab

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/application-list.scss
@@ -241,6 +241,11 @@
   width: 100%;
 }
 
+.application-list__item--studies-file-attacment {
+  padding: 5px 10px;
+  width: 100%;
+}
+
 .application-list__item {
   @include prefix(transition, webkit ms o moz, background-color 0.2s ease-in-out);
   align-items: center;
